添加图片链接，界面细化

--- a/Homepage.html
+++ b/Homepage.html
@@ -41,12 +41,14 @@
 
         <!-- 图片列表：修复标签拼写错误 -->
         <div class="carousel-imgs" id="carouselImgs">
-            <img src="./img/c29ff910ddf2ebc23e41ecbbb730068e44ebe1f1e70c4-aJqSML.png" alt="轮播图1">
-            <img src="./img/fj1.jpg" alt="轮播图2">
-            <img src="./img/fj3.jpg" alt="轮播图3">
-            <img src="./img/hongyangjiaoyujiajingshen (1).png" alt="轮播图4">
-            <img src="./img/weixintupian_20240325141209.jpg" alt="轮播图5">
-            <img src="./img/xcitc-banner-fzs.jpg" alt="轮播图6">
+            <img src="https://www.xcitc.edu.cn/images/c29ff910ddf2ebc23e41ecbbb730068e44ebe1f1e70c4-aJqSML.png" alt="轮播图1">
+            <img src="https://www.xcitc.edu.cn/images/hongyangjiaoyujiajingshen.png" alt="轮播图2">
+            <img src="https://www.xcitc.edu.cn/images/weixintupian_20240325141209.jpg" alt="轮播图3">
+            <img src="https://www.xcitc.edu.cn/images/xcitc-banner-fzs.jpg" alt="轮播图4">
+            <img src="https://www.xcitc.edu.cn/images/jiaqiangquanmianfazhijiaoyuxin.png" alt="轮播图5">
+            <img src="https://www.xcitc.edu.cn/images/xuexiaonanmenxiaofengxiaoxun.png" alt="轮播图6">
+            <img src="https://www.xcitc.edu.cn/images/THESQUAREOFXUZHI.png" alt="轮播图7"></img>
+            <img src="https://www.xcitc.edu.cn/images/22/10/24/1xoc84wjq0/fj1.jpg" alt="轮播图8"></img>
         </div>
 
         <!-- 底部圆点 -->
@@ -70,10 +72,10 @@
                 <!-- 左侧：小轮播图 -->
                 <div class="news-carousel" id="newsCarousel">
                     <div class="news-carousel-list" id="newsCarouselList">
-                        <div><img src="./img/131B4C40B4A452667453B1AE50F_54154CEB_DC13E.png" alt="许职要闻1"></div>
-                        <div><img src="./img/5768E00144465CD6A14087C4547_61208A75_12003.jpg" alt="许职要闻2"></div>
-                        <div><img src="./img/705365905704A9028DE543D64B0_A505FB6B_161A5.jpg" alt="许职要闻3"></div>
-                        <div><img src="./img/BD21CDA0A3B34A207798E895C61_CFA7568A_208BC.jpg" alt="许职要闻4"></div>
+                        <div><img src="https://www.xcitc.edu.cn/__local/A/B0/D8/0C77C070A6790474669FABAC19A_604156F8_27EBA.jpg" alt="许职要闻1"></div>
+                        <div><img src="https://www.xcitc.edu.cn/__local/6/6E/B1/5768E00144465CD6A14087C4547_61208A75_12003.jpg" alt="许职要闻2"></div>
+                        <div><img src="https://www.xcitc.edu.cn/__local/1/03/D4/BD21CDA0A3B34A207798E895C61_CFA7568A_208BC.jpg" alt="许职要闻3"></div>
+                        <div><img src="https://www.xcitc.edu.cn/__local/2/C4/7B/705365905704A9028DE543D64B0_A505FB6B_161A5.jpg" alt="许职要闻4"></div>
                     </div>
                     <!-- 方形数字指示器（1-4） -->
                     <div class="news-carousel-dots">
@@ -305,7 +307,7 @@
                 <div class="info-card">
                     <h3 class="info-title">许职影像</h3>
                     <div class="video-card">
-                        <video loop controls poster="./img/c29ff910ddf2ebc23e41ecbbb730068e44ebe1f1e70c4-aJqSML.png">
+                        <video loop controls poster="https://www.xcitc.edu.cn/__local/8/45/2B/9DC02F12D99CF0939ADBEDAD789_86F323DD_327A2.jpg">
                             <source
                                 src="https://www.xcitc.edu.cn/__local/9/28/45/85E3B36E09DA899AC6CA9913157_7F4D8DF8_2B812A7B.mp4?e=.mp4"
                                 type="video/mp4">
@@ -321,37 +323,34 @@
         <div class="container">
             <!-- 双高建设专题banner -->
             <div class="special-banner">
-                <img src="./img/min-banner-sg-blue.jpg" alt="双高建设专题网站">
+                <img src="https://www.xcitc.edu.cn/img2022/min-banner-sg-blue.jpg" alt="双高建设专题网站">
             </div>
 
             <!-- 专题网站板块（带箭头手动轮播，无自动播放） -->
             <div class="special-title">专题网站</div>
             <div class="carousel-container special-carousel" id="specialCarousel">
-                <!-- 左箭头 -->
                 <button class="carousel-arrow arrow-left" id="specialLeftBtn">&lt;</button>
                 <!-- 轮播轨道 -->
                 <div class="carousel-track" id="specialTrack">
                     <div class="special-card">
-                        <img src="./img/xcitc-zt.jpg" alt="学习贯彻习近平新时代中国特色社会主义思想主题教育">
+                        <img src="https://www.xcitc.edu.cn/images/22/xcitc-zt.jpg" alt="学习贯彻习近平新时代中国特色社会主义思想主题教育">
                     </div>
                     <div class="special-card">
-                        <img src="./img/xcitc-zttp.jpg" alt="招标与采购信息">
+                        <img src="https://www.xcitc.edu.cn/images/21/xcitc-zttp.jpg" alt="招标与采购信息">
                     </div>
                     <div class="special-card">
-                        <img src="./img/zt02.png" alt="学习强国">
+                        <img src="https://www.xcitc.edu.cn/images/22/10/15/1d0no20a45/zt02.png" alt="学习强国">
                     </div>
                     <div class="special-card">
-                        <img src="./img/esd2.jpg" alt="学习宣传贯彻党的二十大精神">
+                        <img src="https://www.xcitc.edu.cn/img2022/esd2.jpg" alt="学习宣传贯彻党的二十大精神">
                     </div>
                     <div class="special-card">
-                        <img src="./img/zt01.png" alt="党史学习教育">
+                        <img src="https://www.xcitc.edu.cn/images/jingshenwenmingjianshe.png" alt="党史学习教育">
                     </div>
-                    <!-- 移除空白图片，避免布局错乱 -->
                     <div class="special-card">
-                        <img src="./img/xcitc-zt.jpg" alt="学习宣传贯彻党的二十大精神">
+                        <img src="https://www.xcitc.edu.cn/images/22/10/15/1d0no20a45/zt01.png" alt="学习宣传贯彻党的二十大精神">
                     </div>
                 </div>
-                <!-- 右箭头 -->
                 <button class="carousel-arrow arrow-right" id="specialRightBtn">&gt;</button>
             </div>
 
@@ -363,31 +362,31 @@
                 <!-- 轮播轨道 -->
                 <div class="carousel-track" id="artisanTrack">
                     <div class="artisan-card">
-                        <img src="./img/13D2F0985A3CA60A0A2842D28C3_052A2D58_1B211.jpg" alt="技能大赛凯旋">
+                        <img src="https://www.xcitc.edu.cn/__local/4/AF/BB/FCF92356A1FB1DD6661BDD58B0D_D491A519_1AAC2.jpg" alt="技能大赛凯旋">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/25D34B3A9EAF7838784B592E849_EFB8459F_177E9.jpg" alt="健康养老赛项夺冠">
+                        <img src="https://www.xcitc.edu.cn/__local/3/74/B1/25D34B3A9EAF7838784B592E849_EFB8459F_177E9.jpg" alt="健康养老赛项夺冠">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/131B4C40B4A452667453B1AE50F_54154CEB_DC13E.png" alt="物流赛项金奖">
+                        <img src="https://www.xcitc.edu.cn/__local/1/11/BA/A5E539ADEBB62187002F3B5DA23_B2E203D3_1947F.jpg" alt="物流赛项金奖">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/5768E00144465CD6A14087C4547_61208A75_12003.jpg" alt="技能大赛凯旋">
+                        <img src="https://www.xcitc.edu.cn/__local/4/AF/BB/FCF92356A1FB1DD6661BDD58B0D_D491A519_1AAC2.jpg" alt="技能大赛凯旋">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/344348AC2E61DF06B7750F6195C_40BE3022_11B56.png" alt="健康养老赛项夺冠">
+                        <img src="https://www.xcitc.edu.cn/__local/3/74/B1/25D34B3A9EAF7838784B592E849_EFB8459F_177E9.jpg" alt="健康养老赛项夺冠">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/705365905704A9028DE543D64B0_A505FB6B_161A5.jpg" alt="物流赛项金奖">
+                        <img src="https://www.xcitc.edu.cn/__local/1/11/BA/A5E539ADEBB62187002F3B5DA23_B2E203D3_1947F.jpg" alt="物流赛项金奖">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/A5E539ADEBB62187002F3B5DA23_B2E203D3_1947F.jpg" alt="技能大赛凯旋">
+                        <img src="https://www.xcitc.edu.cn/__local/4/AF/BB/FCF92356A1FB1DD6661BDD58B0D_D491A519_1AAC2.jpg" alt="技能大赛凯旋">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/BD21CDA0A3B34A207798E895C61_CFA7568A_208BC.jpg" alt="健康养老赛项夺冠">
+                        <img src="https://www.xcitc.edu.cn/__local/3/74/B1/25D34B3A9EAF7838784B592E849_EFB8459F_177E9.jpg" alt="健康养老赛项夺冠">
                     </div>
                     <div class="artisan-card">
-                        <img src="./img/C0CD2A46B15CEC4B1312115DDE2_5EA6FF77_BF796.jpg" alt="物流赛项金奖">
+                        <img src="https://www.xcitc.edu.cn/__local/1/11/BA/A5E539ADEBB62187002F3B5DA23_B2E203D3_1947F.jpg" alt="物流赛项金奖">
                     </div>
                 </div>
                 <!-- 右箭头 -->
@@ -401,65 +400,61 @@
         <div class="special-title">快速通道</div>
         <div class="quick-channel-list">
             <div class="quick-channel-item">
-                <img src="./img/ico-xl.png" alt="校历">
+                <img src="https://www.xcitc.edu.cn/img2022/ico-xl.png" alt="校历">
                 <span>校历</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/kcsz.png" alt="课程思政">
+                <img src="https://www.xcitc.edu.cn/images/21/kcsz.png" alt="课程思政">
                 <span>课程思政</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/ditu.png" alt="校园3D地图">
+                <img src="https://www.xcitc.edu.cn/images/ditu.png" alt="校园3D地图">
                 <span>校园3D地图</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/04zsjy.png" alt="招生就业">
+                <img src="https://www.xcitc.edu.cn/images/21/03/25/1aa3u3s1qj/04zsjy.png" alt="招生就业">
                 <span>招生就业</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/9jw.png" alt="教务管理">
+                <img src="https://www.xcitc.edu.cn/images/21/03/25/1aa3u3s1qj/9jw.png" alt="教务管理">
                 <span>教务管理</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/11lqcx.png" alt="录取查询">
+                <img src="https://www.xcitc.edu.cn/images/2021/11lqcx.png" alt="录取查询">
                 <span>录取查询</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/xtjt.png" alt="杏坛讲堂">
+                <img src="https://www.xcitc.edu.cn/images/2021/xtjt.png" alt="杏坛讲堂">
                 <span>杏坛讲堂</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/12yywz.png" alt="语言文字工作网">
+                <img src="https://www.xcitc.edu.cn/images/2021/12yywz.png" alt="语言文字工作网">
                 <span>语言文字工作网</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/14cxdz.png" alt="超星电子图书">
+                <img src="https://www.xcitc.edu.cn/images/2021/14cxdz.png" alt="超星电子图书">
                 <span>超星电子图书</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/16wfsj.png" alt="万方数据">
+                <img src="https://www.xcitc.edu.cn/images/2021/16wfsj.png" alt="万方数据">
                 <span>万方数据</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/zlbg.png" alt="质量年度报告">
+                <img src="https://www.xcitc.edu.cn/images/21/zlbg.png" alt="质量年度报告">
                 <span>质量年度报告</span>
             </div>
             <div class="quick-channel-item">
-                <img src="./img/ico-zjpt.png" alt="国家智慧教育平台">
+                <img src="https://www.xcitc.edu.cn/images/24/ico-zjpt.png" alt="国家智慧教育平台">
                 <span>国家智慧教育平台</span>
             </div>
         </div>
     </div>
 
     <div class="footer-section">
-        <!-- 快速通道 -->
-
-
         <!-- 页脚主体 -->
         <div class="footer-main">
             <div class="footer-logo">
-                <img src="./img/b-logo.png" alt="校徽">
-                <div class="footer-logo-text">许昌职业技术学院</div>
+                <img src="https://www.xcitc.edu.cn/images/22/b-logo.png" alt="校徽">
             </div>
             <div class="footer-selects">
                 <select name="management" id="management">
@@ -475,11 +470,11 @@
             <!-- 页脚二维码部分 -->
             <div class="footer-qrcode">
                 <div class="footer-qrcode-item">
-                    <img src="./img/xc-wx.jpg" alt="官方微信">
+                    <img src="https://www.xcitc.edu.cn/images/2021/xc-wx.jpg" alt="官方微信">
                     <span>官方微信</span>
                 </div>
                 <div class="footer-qrcode-item">
-                    <img src="./img/weibo.jpg" alt="官方微博">
+                    <img src="https://www.xcitc.edu.cn/weibo.jpg" alt="官方微博">
                     <span>官方微博</span>
                 </div>
             </div>
